menu collapse bug

--- a/frontend/src/components/home-page/content-tree.scss
+++ b/frontend/src/components/home-page/content-tree.scss
@@ -82,6 +82,10 @@
     background: #ffc904;
   }
 
+  .collapsed-item {
+    display: none;
+  }
+
   .type {
     text-align: center;
   }
